2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made URI reusing function work.
	* src/CreateRequestCommand.cc
	* src/FileEntry.cc
	* src/FileEntry.h
	* test/FileEntryTest.cc

2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Add formerly fastest PeerStat's sessionDownloadLength to new
	fastest PeerStat and use _fastestPeerStats to calcuate downloaded
	bytes in a session.	
	* src/PeerStat.cc
	* src/SegmentMan.cc

2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	If pipelining is enabled, we can always pool socket.
	* src/HttpDownloadCommand.cc

2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In a single file download, file size becomes known just after
	downloading, set total length to FileEntry object when download
	completed.	
	* src/DownloadCommand.cc

2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use std::vector::reserve() for fileEntries and pieceHashes in
	bittorrent_helper
	* src/bittorrent_helper.cc

2009-07-04  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed calls to Request::resetUrl() in AbstractCommand.cc.
	Removed hidden option PREF_RESET_URI.
	* src/AbstractCommand.cc
	* src/OptionHandlerFactory.cc
	* src/prefs.cc
	* src/prefs.h

2009-07-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused variable/function.
	* src/PeerStat.h

2009-07-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Show first URL in Download Results if file path is not available.
	* src/FileEntry.h

2009-07-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Throw exception if file path doesn't exist in FTP URL.
	* src/InitiateConnectionCommandFactory.cc 

2009-07-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored BitfieldMan::getSparseMissingUnusedIndex()
	* src/BitfieldMan.cc

2009-07-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
